[gd_scene load_steps=25 format=3 uid="uid://ccc2adpreni52"]

[ext_resource type="Script" uid="uid://7fyshnd5o1hc" path="res://scripts/sombra.gd" id="1_0j110"]
[ext_resource type="Texture2D" uid="uid://d2f74eyt6b5ry" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn8.png" id="1_u32v7"]
[ext_resource type="Texture2D" uid="uid://ds1lmefyqhbhm" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk2.png" id="2_xsrvg"]
[ext_resource type="Texture2D" uid="uid://yatpytqlq8l1" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn2.png" id="3_nkfog"]
[ext_resource type="Texture2D" uid="uid://bcstpfipudhoo" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk3.png" id="3_r0krf"]
[ext_resource type="Texture2D" uid="uid://bcb8iiy0daghl" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn3.png" id="4_pu0k2"]
[ext_resource type="Texture2D" uid="uid://cx26q8qkpqolu" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk4.png" id="4_wom5s"]
[ext_resource type="Texture2D" uid="uid://d3i7if147ue7g" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk5.png" id="5_fiqi5"]
[ext_resource type="Texture2D" uid="uid://csta1ylhuey5h" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn4.png" id="5_vr7dg"]
[ext_resource type="Texture2D" uid="uid://idbmx8giafxh" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk6.png" id="6_0fttm"]
[ext_resource type="Texture2D" uid="uid://cl7bmasx534ll" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn5.png" id="6_ge44d"]
[ext_resource type="Texture2D" uid="uid://cyvfs4veijbyf" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk7.png" id="7_6mdia"]
[ext_resource type="Texture2D" uid="uid://bfmyqfnk3pruk" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn6.png" id="7_ch7km"]
[ext_resource type="Texture2D" uid="uid://dj0qljbyq3qjm" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk8.png" id="8_fud47"]
[ext_resource type="Texture2D" uid="uid://dgiiyxcynrrw0" path="res://recursos/sprites/SombraSprites/SombraWalkDown2/SombraWalk9.png" id="9_8xot5"]
[ext_resource type="Texture2D" uid="uid://btg4ba42rsbal" path="res://recursos/sprites/SombraSprites/SombraWalkSideways/SombraWalkSideways1.png" id="12_fud47"]
[ext_resource type="Texture2D" uid="uid://m0xl85e0w185" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn1.png" id="12_r0krf"]
[ext_resource type="Texture2D" uid="uid://dlgt8q1a6tsfs" path="res://recursos/sprites/SombraSprites/SombraWalkSideways/SombraWalkSideways2.png" id="13_8xot5"]
[ext_resource type="Texture2D" uid="uid://b2m02utrk8c7g" path="res://recursos/sprites/SombraSprites/SombraSpawn/sombraSpawn7.png" id="13_wom5s"]
[ext_resource type="Texture2D" uid="uid://dqy0ymix2m3kb" path="res://recursos/sprites/SombraSprites/SombraWalkSideways/SombraWalkSideways3.png" id="14_dkp2g"]
[ext_resource type="Texture2D" uid="uid://sm47x28qrgsr" path="res://recursos/sprites/SombraSprites/SombraWalkSideways/SombraWalkSideways4.png" id="15_22sd5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5qid6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xsrvg")
}, {
"duration": 1.0,
"texture": ExtResource("3_r0krf")
}, {
"duration": 1.0,
"texture": ExtResource("4_wom5s")
}, {
"duration": 1.0,
"texture": ExtResource("5_fiqi5")
}, {
"duration": 1.0,
"texture": ExtResource("6_0fttm")
}, {
"duration": 1.0,
"texture": ExtResource("7_6mdia")
}, {
"duration": 1.0,
"texture": ExtResource("8_fud47")
}, {
"duration": 1.0,
"texture": ExtResource("9_8xot5")
}],
"loop": true,
"name": &"andar_baixo",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_r0krf")
}, {
"duration": 1.0,
"texture": ExtResource("1_u32v7")
}],
"loop": true,
"name": &"andar_cima",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_fud47")
}, {
"duration": 1.0,
"texture": ExtResource("13_8xot5")
}, {
"duration": 1.0,
"texture": ExtResource("14_dkp2g")
}, {
"duration": 1.0,
"texture": ExtResource("15_22sd5")
}],
"loop": true,
"name": &"andar_esquerda",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_r0krf")
}, {
"duration": 1.0,
"texture": ExtResource("13_wom5s")
}],
"loop": false,
"name": &"ataque",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_r0krf")
}, {
"duration": 1.0,
"texture": ExtResource("3_nkfog")
}, {
"duration": 1.0,
"texture": ExtResource("4_pu0k2")
}, {
"duration": 1.0,
"texture": ExtResource("5_vr7dg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ge44d")
}, {
"duration": 1.0,
"texture": ExtResource("7_ch7km")
}, {
"duration": 1.0,
"texture": ExtResource("13_wom5s")
}, {
"duration": 1.0,
"texture": ExtResource("1_u32v7")
}],
"loop": false,
"name": &"intro",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nkfog")
}],
"loop": false,
"name": &"morte",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xsrvg"]
radius = 86.0
height = 276.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xsrvg"]
radius = 224.0357

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fud47"]
size = Vector2(152, 282)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_0j110")
dano_ataque = 2

[node name="SpriteAnimado" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5qid6")
animation = &"intro"
autoplay = "intro"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 22)
shape = SubResource("CapsuleShape2D_xsrvg")

[node name="TimerRecargaAtaque" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AreaAtaque" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtaque"]
visible = false
position = Vector2(1, 22)
shape = SubResource("CircleShape2D_xsrvg")
metadata/_edit_lock_ = true

[node name="AreaHitbox" type="Area2D" parent="." groups=["inimigo"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHitbox"]
position = Vector2(9, 23)
shape = SubResource("RectangleShape2D_fud47")

[connection signal="animation_finished" from="SpriteAnimado" to="." method="_on_sprite_animado_animation_finished"]
[connection signal="body_entered" from="AreaAtaque" to="." method="_on_area_ataque_body_entered"]
[connection signal="body_exited" from="AreaAtaque" to="." method="_on_area_ataque_body_exited"]
